--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,1 +1,42 @@
-Hallo World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>URL Shortener</title>
+</head>
+
+<body>
+    <div class="container">
+        <h1>URL shortener</h1>
+        <form action="" method="post" class="my-4 form-inline">
+            <label for="fullUrl" class="sr-only">URL</label>
+            <input type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2" placeholder="Enter your URL" required>
+            <button type="submit" class="btn btn-success">Shrink</button>
+        </form>
+        <table class="table table-striped table-responsive">
+            <thead>
+                <th>Full URL</th>
+                <th>Shortened URL</th>
+                <th>Clicks</th>
+            </thead>
+            <tbody>
+                <td>
+                    <a href="#">Hello world</a>
+                </td>
+                <td>
+                    <a href="#">Hii</a>
+                </td>
+                <td>
+                    <a href="#">69</a>
+                </td>
+            </tbody>
+        </table>
+    </div>
+</body>
+
+</html>
