--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1>URL shortener</h1>
-        <form action="" method="post" class="my-4 form-inline">
+        <form action="/shortUrl" method="post" class="my-4 form-inline">
             <label for="fullUrl" class="sr-only">URL</label>
             <input type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2" placeholder="Enter your URL" required>
             <button type="submit" class="btn btn-success">Shrink</button>
@@ -25,15 +25,23 @@
                 <th>Clicks</th>
             </thead>
             <tbody>
-                <td>
-                    <a href="#">Hello world</a>
-                </td>
-                <td>
-                    <a href="#">Hii</a>
-                </td>
-                <td>
-                    <a href="#">69</a>
-                </td>
+                <% shortUrls.forEach(url => { %>
+                    <td>
+                        <a href="<%= url.full %>">
+                            <%= url.full %>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="<%= url.short %>">
+                            <%= url.short %>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="<%= url.clicks %>">
+                            <%= url.clicks %>
+                        </a>
+                    </td>
+                <% }) %>
             </tbody>
         </table>
     </div>
